@@ -12,7 +12,7 @@ HDRS		= commonio.h putpwent.h salt.h sgetpwent.h xmalloc.h myname.h encrypt.h \
 		  pwio.h shadowio.h mbpasswd.h mbuseradd.h rad64.h getdef.h pw_util.h \
 		  mblogin.h env.h chowntty.h shell.h basename.h pwdcheck.h pwauth.h \
 		  loginprompt.h utmp.h limits.h setupenv.h sub.h log.h setugid.h
-MBUSERADD_OBJS	= mbuseradd.o
+MBUSERADD_OBJS	= mbuseradd.o xmalloc.o
 MBPASSWD_OBJS	= mbpasswd.o commonio.o pwio.o shadowio.o sgetpwent.o \
 		  xmalloc.o myname.o rad64.o salt.o getdef.o encrypt.o putpwent.o pw_util.o
 MBLOGIN_OBJS	= getdef.o env.o chowntty.o shell.o basename.o pwdcheck.o pwauth.o encrypt.o \
@@ -94,7 +94,7 @@ encrypt.o: ../config.h encrypt.h
 pwio.o: ../config.h sgetpwent.h commonio.h putpwent.h pwio.h
 shadowio.o: ../config.h commonio.h shadowio.h
 mbpasswd.o: ../config.h encrypt.h rad64.h myname.h xmalloc.h pwio.h shadowio.h pw_util.h getdef.h mbpasswd.h
-mbuseradd.o: ../config.h mbuseradd.h
+mbuseradd.o: ../config.h xmalloc.h mbuseradd.h
 rad64.o: ../config.h rad64.h
 getdef.o: ../config.h getdef.h
 pw_util.o: ../config.h pw_util.h
